--- a/.sanity-template/manifest.json
+++ b/.sanity-template/manifest.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "title": "Next.js E-commerce",
+  "title": "PAFM",
   "description": "Sanity E-commerce example with Next.js frontend, deployed to Vercel.",
   "previewMedia": {
     "type": "image",
