--- a/studio/package.json
+++ b/studio/package.json
@@ -19,6 +19,7 @@
     "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.2.6",
+    "@sanity/dashboard": "^2.7.0",
     "@sanity/default-layout": "^2.3.2",
     "@sanity/default-login": "^2.2.6",
     "@sanity/desk-tool": "^2.3.2",
@@ -28,7 +29,8 @@
     "react-dom": "16.14.0",
     "react-icons": "^3.11.0",
     "react-moveable": "^0.22.6",
-    "resize-observer": "^1.0.0"
+    "resize-observer": "^1.0.0",
+    "sanity-plugin-vercel-deploy": "^1.1.0"
   },
   "devDependencies": {}
 }
