--- a/studio/package.json
+++ b/studio/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sanity/base": "^2.3.2",
     "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/cli": "^2.8.0",
     "@sanity/color-input": "^2.2.6",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.2.6",
@@ -24,6 +25,7 @@
     "@sanity/default-login": "^2.2.6",
     "@sanity/desk-tool": "^2.3.2",
     "@sanity/vision": "^2.2.6",
+    "global": "^4.4.0",
     "prop-types": "^15.7",
     "react": "16.14.0",
     "react-dom": "16.14.0",
